build_x86-32.log
Makefile:174: atención: se anulan las instrucciones para el objetivo 'clean'
Makefile:151: atención: se ignoran las instrucciones viejas para el objetivo 'clean'
Compilando para arquitectura: x86-32
Directorio de arquitectura: arch/x86-32
Flags C: -m32 -march=i686 -nostdlib -nostdinc -fno-builtin -fno-stack-protector -fno-pic -nodefaultlibs -ffreestanding -I/home/ivanr013/Escritorio/ir0-kernel/includes -I/home/ivanr013/Escritorio/ir0-kernel/includes/ir0 -I/home/ivanr013/Escritorio/ir0-kernel/arch/common -I/home/ivanr013/Escritorio/ir0-kernel/arch/x86-32/include -Wall -Wextra -O1 -MMD -MP
Flags ASM: -f elf32
Flags LD: -m elf_i386 -T arch/x86-32/linker.ld

make -C kernel CC="gcc" ASM="nasm" CFLAGS="-m32 -march=i686 -nostdlib -nostdinc -fno-builtin -fno-stack-protector -fno-pic -nodefaultlibs -ffreestanding -I/home/ivanr013/Escritorio/ir0-kernel/includes -I/home/ivanr013/Escritorio/ir0-kernel/includes/ir0 -I/home/ivanr013/Escritorio/ir0-kernel/arch/common -I/home/ivanr013/Escritorio/ir0-kernel/arch/x86-32/include -Wall -Wextra -O1 -MMD -MP" ASMFLAGS="-f elf32"
make[1]: se entra en el directorio '/home/ivanr013/Escritorio/ir0-kernel/kernel'
gcc -m32 -march=i686 -nostdlib -nostdinc -fno-builtin -fno-stack-protector -fno-pic -nodefaultlibs -ffreestanding -I/home/ivanr013/Escritorio/ir0-kernel/includes -I/home/ivanr013/Escritorio/ir0-kernel/includes/ir0 -I/home/ivanr013/Escritorio/ir0-kernel/arch/common -I/home/ivanr013/Escritorio/ir0-kernel/arch/x86-32/include -Wall -Wextra -O1 -MMD -MP -c kernel_start.c -o kernel_start.o
kernel_start.c: In function ‘main’:
kernel_start.c:29:5: warning: implicit declaration of function ‘physical_allocator_init’ [-Wimplicit-function-declaration]
   29 |     physical_allocator_init();
      |     ^~~~~~~~~~~~~~~~~~~~~~~
kernel_start.c:37:5: warning: implicit declaration of function ‘heap_allocator_init’ [-Wimplicit-function-declaration]
   37 |     heap_allocator_init();
      |     ^~~~~~~~~~~~~~~~~~~
kernel_start.c:41:5: warning: implicit declaration of function ‘memory_init’ [-Wimplicit-function-declaration]
   41 |     memory_init();
      |     ^~~~~~~~~~~
In file included from scheduler/scheduler.h:3,
                 from kernel_start.c:3:
scheduler/scheduler_types.h: At top level:
scheduler/scheduler_types.h:48:23: warning: ‘cfs_rq’ defined but not used [-Wunused-variable]
   48 | static cfs_runqueue_t cfs_rq;
      |                       ^~~~~~
[1;32m============================================================[0m
[1;32m KernelMain subsystem compilado correctamente para [0m
[1;32m============================================================[0m
make[1]: se sale del directorio '/home/ivanr013/Escritorio/ir0-kernel/kernel'
make -C interrupt CC="gcc" ASM="nasm" CFLAGS="-m32 -march=i686 -nostdlib -nostdinc -fno-builtin -fno-stack-protector -fno-pic -nodefaultlibs -ffreestanding -I/home/ivanr013/Escritorio/ir0-kernel/includes -I/home/ivanr013/Escritorio/ir0-kernel/includes/ir0 -I/home/ivanr013/Escritorio/ir0-kernel/arch/common -I/home/ivanr013/Escritorio/ir0-kernel/arch/x86-32/include -Wall -Wextra -O1 -MMD -MP" ASMFLAGS="-f elf32"
make[1]: se entra en el directorio '/home/ivanr013/Escritorio/ir0-kernel/interrupt'
gcc -m32 -march=i686 -nostdlib -nostdinc -fno-builtin -fno-stack-protector -fno-pic -nodefaultlibs -ffreestanding -I/home/ivanr013/Escritorio/ir0-kernel/includes -I/home/ivanr013/Escritorio/ir0-kernel/includes/ir0 -I/home/ivanr013/Escritorio/ir0-kernel/arch/common -I/home/ivanr013/Escritorio/ir0-kernel/arch/x86-32/include -Wall -Wextra -O1 -MMD -MP -c idt.c -o idt.o
gcc -m32 -march=i686 -nostdlib -nostdinc -fno-builtin -fno-stack-protector -fno-pic -nodefaultlibs -ffreestanding -I/home/ivanr013/Escritorio/ir0-kernel/includes -I/home/ivanr013/Escritorio/ir0-kernel/includes/ir0 -I/home/ivanr013/Escritorio/ir0-kernel/arch/common -I/home/ivanr013/Escritorio/ir0-kernel/arch/x86-32/include -Wall -Wextra -O1 -MMD -MP -c isr_handlers.c -o isr_handlers.o
In file included from ../kernel/scheduler/scheduler.h:3,
                 from isr_handlers.h:6,
                 from isr_handlers.c:6:
../kernel/scheduler/scheduler_types.h:48:23: warning: ‘cfs_rq’ defined but not used [-Wunused-variable]
   48 | static cfs_runqueue_t cfs_rq;
      |                       ^~~~~~
nasm  arch/x86-32/interrupt.asm -o arch/x86-32/interrupt.o
arch/x86-32/interrupt.asm:25: error: binary output format does not support external references
arch/x86-32/interrupt.asm:32: error: binary output format does not support external references
arch/x86-32/interrupt.asm:39: error: binary output format does not support external references
arch/x86-32/interrupt.asm:47: error: binary output format does not support external references
make[1]: *** [Makefile:22: arch/x86-32/interrupt.o] Error 1
make[1]: se sale del directorio '/home/ivanr013/Escritorio/ir0-kernel/interrupt'
make: *** [Makefile:59: interrupt] Error 2
